--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0"
   },
-  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
