--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "react": "^18.0.0",
