--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react.dev",
   "version": "0.0.0",
   "main": "/src/index.js",
+  "homepage ": "https://abdulrahmanhatem.github.io/tic-tac-toe/",
+  "private": false,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
